--- a/genindex.html
+++ b/genindex.html
@@ -152,18 +152,30 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#B"><strong>B</strong></a>
+ <a href="#A"><strong>A</strong></a>
+ | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
+ | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
+ | <a href="#P"><strong>P</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
  | <a href="#X"><strong>X</strong></a>
  
 </div>
+<h2 id="A">A</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.AnalyticComponent">AnalyticComponent (class in fgbuster.component_model)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -175,7 +187,13 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.CMB">CMB (class in fgbuster.component_model)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/fgbuster.algebra.html#fgbuster.algebra.comp_sep">comp_sep() (in module fgbuster.algebra)</a>
+</li>
+      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.Component">Component (class in fgbuster.component_model)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -183,7 +201,21 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.Component.defaults">defaults (fgbuster.component_model.Component attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.Component.diff">diff() (fgbuster.component_model.Component method)</a>
+</li>
       <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.Dust">Dust (class in fgbuster.component_model)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.Component.eval">eval() (fgbuster.component_model.Component method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -195,13 +227,15 @@
 </li>
       <li><a href="api/fgbuster.component_model.html#module-fgbuster.component_model">fgbuster.component_model (module)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/fgbuster.mixingmatrix.html#module-fgbuster.mixingmatrix">fgbuster.mixingmatrix (module)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/fgbuster.separation_recipies.html#module-fgbuster.separation_recipies">fgbuster.separation_recipies (module)</a>
 </li>
       <li><a href="api/fgbuster.xForecast.html#module-fgbuster.xForecast">fgbuster.xForecast (module)</a>
+</li>
+      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.FreeFree">FreeFree (class in fgbuster.component_model)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -221,7 +255,33 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.ModifiedBlackBody">ModifiedBlackBody (class in fgbuster.component_model)</a>
+</li>
       <li><a href="api/fgbuster.algebra.html#fgbuster.algebra.multi_comp_sep">multi_comp_sep() (in module fgbuster.algebra)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.Component.n_param">n_param (fgbuster.component_model.Component attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="P">P</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/fgbuster.algebra.html#fgbuster.algebra.P_dBdB">P_dBdB() (in module fgbuster.algebra)</a>
+</li>
+      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.Component.params">params (fgbuster.component_model.Component attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.PowerLaw">PowerLaw (class in fgbuster.component_model)</a>
+</li>
+      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.PowerLawCurv">PowerLawCurv (class in fgbuster.component_model)</a>
 </li>
   </ul></td>
 </tr></table>
