xF in cosmology

--- a/_modules/fgbuster/component_model.html
+++ b/_modules/fgbuster/component_model.html
@@ -168,6 +168,21 @@
 <span class="kn">from</span> <span class="nn">astropy.cosmology</span> <span class="k">import</span> <span class="n">Planck15</span>
 <span class="kn">import</span> <span class="nn">pysm</span>
 
+
+<span class="n">__all__</span> <span class="o">=</span> <span class="p">[</span>
+    <span class="s1">&#39;Component&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;AnalyticComponent&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;AME&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;CMB&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;Dust&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;FreeFree&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;ModifiedBlackBody&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;PowerLaw&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;PowerLawCurv&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;Synchrotron&#39;</span><span class="p">,</span>
+<span class="p">]</span>
+
+
 <span class="n">H_OVER_K</span> <span class="o">=</span> <span class="n">constants</span><span class="o">.</span><span class="n">h</span> <span class="o">*</span> <span class="mf">1e9</span> <span class="o">/</span> <span class="n">constants</span><span class="o">.</span><span class="n">k</span>
 
 <span class="c1"># Conversion factor at frequency nu</span>
