--- a/genindex.html
+++ b/genindex.html
@@ -158,12 +158,10 @@
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
- | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#S"><strong>S</strong></a>
- | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
  | <a href="#X"><strong>X</strong></a>
  
@@ -191,8 +189,6 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/fgbuster.algebra.html#fgbuster.algebra.comp_sep">comp_sep() (in module fgbuster.algebra)</a>
-</li>
       <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.Component">Component (class in fgbuster.component_model)</a>
 </li>
   </ul></td>
@@ -227,23 +223,15 @@
 </li>
       <li><a href="api/fgbuster.component_model.html#module-fgbuster.component_model">fgbuster.component_model (module)</a>
 </li>
+      <li><a href="api/fgbuster.cosmology.html#module-fgbuster.cosmology">fgbuster.cosmology (module)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/fgbuster.mixingmatrix.html#module-fgbuster.mixingmatrix">fgbuster.mixingmatrix (module)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/fgbuster.separation_recipies.html#module-fgbuster.separation_recipies">fgbuster.separation_recipies (module)</a>
 </li>
-      <li><a href="api/fgbuster.xForecast.html#module-fgbuster.xForecast">fgbuster.xForecast (module)</a>
-</li>
       <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.FreeFree">FreeFree (class in fgbuster.component_model)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="L">L</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/fgbuster.algebra.html#fgbuster.algebra.logL_dB">logL_dB() (in module fgbuster.algebra)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -256,8 +244,6 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.ModifiedBlackBody">ModifiedBlackBody (class in fgbuster.component_model)</a>
-</li>
-      <li><a href="api/fgbuster.algebra.html#fgbuster.algebra.multi_comp_sep">multi_comp_sep() (in module fgbuster.algebra)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -273,8 +259,6 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/fgbuster.algebra.html#fgbuster.algebra.P_dBdB">P_dBdB() (in module fgbuster.algebra)</a>
-</li>
       <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.Component.params">params (fgbuster.component_model.Component attribute)</a>
 </li>
   </ul></td>
@@ -294,23 +278,9 @@
   </ul></td>
 </tr></table>
 
-<h2 id="V">V</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/fgbuster.algebra.html#fgbuster.algebra.verbose_callback">verbose_callback() (in module fgbuster.algebra)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="W">W</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/fgbuster.algebra.html#fgbuster.algebra.W_dB">W_dB() (in module fgbuster.algebra)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/fgbuster.algebra.html#fgbuster.algebra.W_dBdB">W_dBdB() (in module fgbuster.algebra)</a>
-</li>
       <li><a href="api/fgbuster.separation_recipies.html#fgbuster.separation_recipies.weighted_comp_sep">weighted_comp_sep() (in module fgbuster.separation_recipies)</a>
 </li>
   </ul></td>
@@ -319,7 +289,7 @@
 <h2 id="X">X</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/fgbuster.xForecast.html#fgbuster.xForecast.xForecast">xForecast() (in module fgbuster.xForecast)</a>
+      <li><a href="api/fgbuster.cosmology.html#fgbuster.cosmology.xForecast">xForecast() (in module fgbuster.cosmology)</a>
 </li>
   </ul></td>
 </tr></table>
