--- a/_modules/fgbuster/component_model.html
+++ b/_modules/fgbuster/component_model.html
@@ -161,7 +161,7 @@
 <span class="kn">import</span> <span class="nn">os.path</span> <span class="k">as</span> <span class="nn">op</span>
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 <span class="kn">import</span> <span class="nn">sympy</span>
-<span class="kn">from</span> <span class="nn">sympy</span> <span class="k">import</span> <span class="n">lambdify</span>
+<span class="kn">import</span> <span class="nn">sympy</span>
 <span class="kn">from</span> <span class="nn">sympy.parsing.sympy_parser</span> <span class="k">import</span> <span class="n">parse_expr</span>
 <span class="kn">import</span> <span class="nn">scipy</span>
 <span class="kn">from</span> <span class="nn">scipy</span> <span class="k">import</span> <span class="n">constants</span>
@@ -182,6 +182,8 @@
     <span class="s1">&#39;Synchrotron&#39;</span><span class="p">,</span>
 <span class="p">]</span>
 
+
+<span class="n">lambdify</span> <span class="o">=</span> <span class="k">lambda</span> <span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">:</span> <span class="n">sympy</span><span class="o">.</span><span class="n">lambdify</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">,</span> <span class="s1">&#39;numpy&#39;</span><span class="p">)</span>
 
 <span class="n">H_OVER_K</span> <span class="o">=</span> <span class="n">constants</span><span class="o">.</span><span class="n">h</span> <span class="o">*</span> <span class="mf">1e9</span> <span class="o">/</span> <span class="n">constants</span><span class="o">.</span><span class="n">k</span>
 
@@ -412,12 +414,12 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">_params</span><span class="o">.</span><span class="n">pop</span><span class="p">(</span><span class="mi">0</span><span class="p">)</span>
 
         <span class="c1"># Create lambda functions</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">_lambda</span> <span class="o">=</span> <span class="n">lambdify</span><span class="p">(</span><span class="n">symbols</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_expr</span><span class="p">,</span> <span class="s1">&#39;numpy&#39;</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_lambda</span> <span class="o">=</span> <span class="n">lambdify</span><span class="p">(</span><span class="n">symbols</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_expr</span><span class="p">)</span>
         <span class="n">lambdify_diff_param</span> <span class="o">=</span> <span class="k">lambda</span> <span class="n">param</span><span class="p">:</span> <span class="n">lambdify</span><span class="p">(</span>
-            <span class="n">symbols</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_expr</span><span class="o">.</span><span class="n">diff</span><span class="p">(</span><span class="n">param</span><span class="p">),</span> <span class="s1">&#39;numpy&#39;</span><span class="p">)</span>
+            <span class="n">symbols</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_expr</span><span class="o">.</span><span class="n">diff</span><span class="p">(</span><span class="n">param</span><span class="p">))</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_lambda_diff</span> <span class="o">=</span> <span class="p">[</span><span class="n">lambdify_diff_param</span><span class="p">(</span><span class="n">p</span><span class="p">)</span> <span class="k">for</span> <span class="n">p</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_params</span><span class="p">]</span>
         <span class="n">lambdify_diff_diff_params</span> <span class="o">=</span> <span class="k">lambda</span> <span class="n">param1</span><span class="p">,</span> <span class="n">param2</span><span class="p">:</span> <span class="n">lambdify</span><span class="p">(</span>
-            <span class="n">symbols</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_expr</span><span class="o">.</span><span class="n">diff</span><span class="p">(</span><span class="n">param1</span><span class="p">,</span> <span class="n">param2</span><span class="p">),</span> <span class="s1">&#39;numpy&#39;</span><span class="p">)</span>
+            <span class="n">symbols</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_expr</span><span class="o">.</span><span class="n">diff</span><span class="p">(</span><span class="n">param1</span><span class="p">,</span> <span class="n">param2</span><span class="p">))</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_lambda_diff_diff</span> <span class="o">=</span> <span class="p">[]</span>
         <span class="k">for</span> <span class="n">p1</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_params</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_lambda_diff_diff</span><span class="o">.</span><span class="n">append</span><span class="p">(</span>
