--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ European Commissions H2020 Research Infrastructures under the Grant Agreement
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2018, Davide Poletti, Josquin Errard
+        &copy; Copyright 2018, Davide Poletti, Josquin Errard and the FGBuster developers
 
     </p>
   </div>
