--- a/_modules/index.html
+++ b/_modules/index.html
@@ -146,7 +146,8 @@
            <div itemprop="articleBody">
             
   <h1>All modules for which code is available</h1>
-<ul><li><a href="fgbuster/component_model.html">fgbuster.component_model</a></li>
+<ul><li><a href="fgbuster/algebra.html">fgbuster.algebra</a></li>
+<li><a href="fgbuster/component_model.html">fgbuster.component_model</a></li>
 <li><a href="fgbuster/cosmology.html">fgbuster.cosmology</a></li>
 <li><a href="fgbuster/mixingmatrix.html">fgbuster.mixingmatrix</a></li>
 <li><a href="fgbuster/separation_recipies.html">fgbuster.separation_recipies</a></li>
@@ -162,7 +163,7 @@
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2018, Davide Poletti, Josquin Errard
+        &copy; Copyright 2018, Davide Poletti, Josquin Errard and the FGBuster developers
 
     </p>
   </div>
