--- a/examples.html
+++ b/examples.html
@@ -211,7 +211,7 @@ of the FGBuster repository.</p>
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2018, Davide Poletti, Josquin Errard
+        &copy; Copyright 2018, Davide Poletti, Josquin Errard and the FGBuster developers
 
     </p>
   </div>
