--- a/examples/component_and_mixingmatrix.html
+++ b/examples/component_and_mixingmatrix.html
@@ -1001,7 +1001,7 @@ vector.</p>
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2018, Davide Poletti, Josquin Errard
+        &copy; Copyright 2018, Davide Poletti, Josquin Errard and the FGBuster developers
 
     </p>
   </div>
