--- a/genindex.html
+++ b/genindex.html
@@ -158,6 +158,7 @@
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
+ | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
@@ -189,6 +190,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/fgbuster.algebra.html#fgbuster.algebra.comp_sep">comp_sep() (in module fgbuster.algebra)</a>
+</li>
       <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.Component">Component (class in fgbuster.component_model)</a>
 </li>
   </ul></td>
@@ -236,6 +239,14 @@
   </ul></td>
 </tr></table>
 
+<h2 id="L">L</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/fgbuster.algebra.html#fgbuster.algebra.logL_dB">logL_dB() (in module fgbuster.algebra)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -244,6 +255,8 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.ModifiedBlackBody">ModifiedBlackBody (class in fgbuster.component_model)</a>
+</li>
+      <li><a href="api/fgbuster.algebra.html#fgbuster.algebra.multi_comp_sep">multi_comp_sep() (in module fgbuster.algebra)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -259,13 +272,13 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.Component.params">params (fgbuster.component_model.Component attribute)</a>
+      <li><a href="api/fgbuster.algebra.html#fgbuster.algebra.P_dBdB">P_dBdB() (in module fgbuster.algebra)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.PowerLaw">PowerLaw (class in fgbuster.component_model)</a>
+      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.Component.params">params (fgbuster.component_model.Component attribute)</a>
 </li>
-      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.PowerLawCurv">PowerLawCurv (class in fgbuster.component_model)</a>
+      <li><a href="api/fgbuster.component_model.html#fgbuster.component_model.PowerLaw">PowerLaw (class in fgbuster.component_model)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -281,6 +294,12 @@
 <h2 id="W">W</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/fgbuster.algebra.html#fgbuster.algebra.W_dB">W_dB() (in module fgbuster.algebra)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/fgbuster.algebra.html#fgbuster.algebra.W_dBdB">W_dBdB() (in module fgbuster.algebra)</a>
+</li>
       <li><a href="api/fgbuster.separation_recipies.html#fgbuster.separation_recipies.weighted_comp_sep">weighted_comp_sep() (in module fgbuster.separation_recipies)</a>
 </li>
   </ul></td>
@@ -306,7 +325,7 @@
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2018, Davide Poletti, Josquin Errard
+        &copy; Copyright 2018, Davide Poletti, Josquin Errard and the FGBuster developers
 
     </p>
   </div>
