--- a/contributing.html
+++ b/contributing.html
@@ -186,7 +186,7 @@ mkdir fgbuster-docs
 <span class="nb">cd</span> fgbuster-docs
 git clone git@github.com:fgbuster/fgbuster.git html
 <span class="nb">cd</span> html
-git ch gh-pages
+git checkout gh-pages
 </pre></div>
 </div>
 <p>You have now two clones of the FGBuster repository. It is important that they
